# netix-protocol-core

./: .gitignore  Cargo.toml  NOTICE  README.md  deny.toml
.github/workflows/: ci.yml
crates/proto-api/: Cargo.toml
crates/proto-api/src/: lib.rs
crates/proto-bacnet/: Cargo.toml
crates/proto-bacnet/fuzz/: Cargo.toml
crates/proto-bacnet/fuzz/fuzz_targets/: decode_scalar_value.rs
crates/proto-bacnet/src/: lib.rs
crates/proto-bacnet/src/republish/: mod.rs  refresh.rs  test_support.rs  value.rs
crates/proto-bacnet/src/sim/: apdu.rs  mod.rs  properties.rs  registry.rs  rpm.rs  whois_compat.rs
crates/proto-bacnet/tests/: bacnet_loopback.rs  republish_loopback.rs
crates/proto-modbus/: Cargo.toml
crates/proto-modbus/src/: lib.rs
crates/proto-modbus/src/republish/: mod.rs  scan.rs
crates/proto-modbus/src/sim/: map.rs  mod.rs
crates/proto-modbus/tests/: republish_loopback.rs  serve_smoke.rs
crates/proto-opcua/: Cargo.toml
crates/proto-opcua/src/: lib.rs
crates/proto-opcua/src/republish/: mod.rs
crates/proto-opcua/src/sim/: mod.rs
crates/proto-opcua/tests/: republish_loopback.rs  secured_loopback.rs
crates/republish-core/: Cargo.toml
crates/republish-core/src/: app.rs  config.rs  import.rs  lib.rs  log.rs  model.rs  mqtt.rs  network.rs  protocol.rs  topic.rs  ui.rs  worker.rs
crates/republish-core/src/worker/: backoff.rs  events.rs  mod.rs  runtime.rs
crates/sim-core/: Cargo.toml  config.yaml
crates/sim-core/src/: config.rs  lib.rs  protocol.rs
crates/sim-core/src/app/: log.rs  metrics.rs  mod.rs  snapshot.rs
crates/sim-core/src/config/: minimal.rs
crates/sim-core/src/simulation/: mod.rs  models.rs  profiles.rs  seasonality.rs
crates/sim-core/src/tui/: config_panel.rs  dashboard.rs  devices.rs  mod.rs  wizard.rs
