[package]
name = "republish-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Protocol-agnostic republisher: MQTT/TLS publishing, worker orchestration, and capability-driven iced GUI."

[dependencies]
proto-api = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
directories = "6.0"
get_if_addrs = "0.5"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }

rumqttc = "0.25.1"
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"

iced = { version = "0.14", features = ["fira-sans", "image", "tokio", "svg"] }

[dev-dependencies]
tempfile = "3"
