[workspace]

[package]
name = "proto-bacnet-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
proto-bacnet = { path = "..", features = ["republish"] }

[[bin]]
name = "decode_scalar_value"
path = "fuzz_targets/decode_scalar_value.rs"
test = false
doc = false
bench = false
